@@ -42,6 +42,7 @@
     * FIX: fix exception in rules that use facility local7
     * Replication slave can now copy rules from master into local configuration
       via a new button in WATO.
+    * Speedup access to event history by earlier filtering and prefiltering with grep
 
 1.2.1i3:
     Core:
